2001-02-21  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/fvwm2.1:
	fixed the description of Focus, added example; use Next () instead []

	* README:
	added a link to www.fvwm.org

2001-02-21  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm.h:
	fixed type mismatches

2001-02-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/read.c (ReadSubFunc):
	fixed a core dump when using read or the -f option with an abosulute
	path

2001-01-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/read.c (ReadSubFunc):
	security fix by Tilmann Boess; do not use the .fvwm2rc from . if HOME
	variable is not set

2000-05-31  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/placement.c.orig (SmartPlacement):
	some minor fixes in smart placement

2000-01-13  Dan Espen  <dane@mk.telcordia.com>

	* .cvsignore: Add .cvsignore to try to stop things coming out of the
	attic spontaneously.  Remove generated file, configure.

2000-01-10  Dan Espen  <dane@mk.telcordia.com>

	* libs/Picture.c: Fix colorlimit for case when there is only monochrome
	or grayscale in the pixmap.

1999-11-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in: set version to 2.2.5.

1999-10-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in: set version to 2.2.4.

1999-10-02  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/fvwm.c (StartupStuff): add support for StartFunction
	* fvwm/function.c (setPath, setImagePath): new functions for ImagePath
	* NEWS, fvwm/fvwm2.1: document StartFunction & ImagePath support

	* fvwm/events.c (HandlePropertyNotify): fix cut-and-paste typo

1999-10-02  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/events.c (HandlePropertyNotify): limits names of icons/windows
	to 200 characters to prevent hanging X server

1999-22-06  Dominik Vogt  <dominik_vogt@hp.com>

	* fvwm/move.c (InteractiveMove): Small interactive move fix (bug #377)

Thu May 27 07:38:11 1999  DanEspen  <dje@blue>

	* fvwm/fvwm2.1 (EdgeThickness): Updated man pages, EdgeThickness
	can be used at any time.
